switch to whisper-faster

--- a/process.ipynb
+++ b/process.ipynb
@@ -13,16 +13,21 @@
     "source_dir = \"C:\\\\projects\\\\local\\\\video_analysis\"\n",
     "video_dir = 'video'\n",
     "audio_dir = 'audio'\n",
-    "text_dir = 'text'\n",
+    "text_dir = 'text-faster'\n",
     "date_dir = 'date'\n",
     "ffmpeg_path = os.environ['LOCALAPPDATA'] + \"\\\\Microsoft\\\\WinGet\\\\Packages\\\\Gyan.FFmpeg_Microsoft.Winget.Source_8wekyb3d8bbwe\\\\ffmpeg-6.0-full_build\\\\bin\\\\ffmpeg.exe\"\n",
     "import whisper\n",
+    "from faster_whisper import WhisperModel\n",
     "import torch\n",
     "os.environ[\"OPENAI_API_TYPE\"]=\"azure\"\n",
     "os.environ[\"OPENAI_API_VERSION\"]=\"2023-05-15\"\n",
-    "whisper_model_name = 'medium.en'\n",
+    "whisper_model_name = None #'medium.en'\n",
+    "faster_whisper_model_name = 'large-v2'\n",
     "whisper_device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print('Using whisper model {} on device {}'.format(whisper_model_name, whisper_device))\n",
+    "if whisper_model_name is None:\n",
+    "    print('Using faster-whisper model {} on device {}'.format(faster_whisper_model_name, whisper_device))\n",
+    "else:\n",
+    "    print('Using whisper model {} on device {}'.format(whisper_model_name, whisper_device))\n",
     "\n",
     "# get settings from files\n",
     "with open(os.path.join(source_dir, \"openai-base.txt\"), \"r\") as f:\n",
@@ -125,33 +130,69 @@
     "                if not os.path.isfile(txt_file) or not(os.path.isfile(json_file)):\n",
     "                    print('using {} to make {} and {}'.format(mp3_file, txt_file, json_file))\n",
     "                    if model is None:\n",
-    "                        print('loading {} whisper model on device {}...'.format(whisper_model_name, whisper_device))\n",
-    "                        model = whisper.load_model(whisper_model_name, device=whisper_device)\n",
-    "                        print('loaded whisper model - processing file')\n",
+    "                        if whisper_model_name is None:\n",
+    "                            print('loading {} faster-whisper model on device {}...'.format(faster_whisper_model_name, whisper_device.type))\n",
+    "                            model = WhisperModel(faster_whisper_model_name, device=whisper_device.type, compute_type=\"float16\")\n",
+    "                            print('loaded faster-whisper model - processing file')\n",
+    "                        else:\n",
+    "                            print('loading {} whisper model on device {}...'.format(whisper_model_name, whisper_device))\n",
+    "                            model = whisper.load_model(whisper_model_name, device=whisper_device)\n",
+    "                            print('loaded whisper model - processing file')\n",
     "\n",
-    "                    result = model.transcribe(mp3_file)\n",
-    "                    # result has the following structure:\n",
-    "                    #  text: string\n",
-    "                    #  language: string\n",
-    "                    #  segments: array of\n",
-    "                    #    id: number\n",
-    "                    #    seek: number\n",
-    "                    #    start: number\n",
-    "                    #    end: number\n",
-    "                    #    text: string\n",
-    "                    #    tokens: number[]\n",
-    "                    #    temperature: number\n",
-    "                    #    avg_logprob: number\n",
-    "                    #    compression_ratio: number\n",
-    "                    #    no_speech_prob: number\n",
+    "                    segments = None\n",
+    "                    if whisper_model_name is None:\n",
+    "                        segments, info = model.transcribe(mp3_file, beam_size=5)\n",
+    "                        # force evaluation now\n",
+    "                        segments = list(segments)\n",
+    "                    else:\n",
+    "                        result = model.transcribe(mp3_file)\n",
+    "                        segments = result['segments']\n",
+    "\n",
+    "                        # result has the following structure:\n",
+    "                        #  text: string\n",
+    "                        #  language: string\n",
+    "                        #  segments: array of\n",
+    "                        #    id: number\n",
+    "                        #    seek: number\n",
+    "                        #    start: number\n",
+    "                        #    end: number\n",
+    "                        #    text: string\n",
+    "                        #    tokens: number[]\n",
+    "                        #    temperature: number\n",
+    "                        #    avg_logprob: number\n",
+    "                        #    compression_ratio: number\n",
+    "                        #    no_speech_prob: number\n",
     "\n",
     "                    # if we used text, we'll get one giant line.  Instead, we'll use segments\n",
-    "                    print('got {} segments from {}'.format(len(result['segments']), mp3_file))\n",
+    "                    print('got {} segments from {}'.format(len(segments), mp3_file))\n",
+    "                    os.makedirs(os.path.dirname(txt_file), exist_ok=True)\n",
     "                    with open(txt_file, 'w') as f:\n",
-    "                        for segment in result['segments']:\n",
-    "                            f.write(segment['text'].strip() + '\\n')\n",
+    "                        for segment in segments:\n",
+    "                            if whisper_model_name is None:\n",
+    "                                f.write(segment.text.strip() + '\\n')\n",
+    "                            else:\n",
+    "                                f.write(segment['text'].strip() + '\\n')\n",
+    "                    tojson = segments\n",
+    "                    if whisper_model_name is None:\n",
+    "                        # convert list of tuples to list of dicts\n",
+    "                        tojson = []\n",
+    "                        for segment in segments:\n",
+    "                            # completely guessed by CoPilot - I just had to change it from a [0]/etc. to .id/etc.\n",
+    "                            tojson.append({\n",
+    "                                'id': segment.id,\n",
+    "                                'seek': segment.seek,\n",
+    "                                'start': segment.start,\n",
+    "                                'end': segment.end,\n",
+    "                                'text': segment.text,\n",
+    "                                'tokens': segment.tokens,\n",
+    "                                'temperature': segment.temperature,\n",
+    "                                'avg_logprob': segment.avg_logprob,\n",
+    "                                'compression_ratio': segment.compression_ratio,\n",
+    "                                'no_speech_prob': segment.no_speech_prob,\n",
+    "                            })\n",
+    "\n",
     "                    with open(json_file, 'w') as f:\n",
-    "                        f.write(json.dumps(result['segments']))\n",
+    "                        f.write(json.dumps(tojson))\n",
     "                    print('wrote to {} and {}'.format(txt_file, json_file))\n",
     "process_files()\n",
     "print('generated TXTs for all MP3s in ' + source_dir)\n"
