--- a/process.ipynb
+++ b/process.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
     "                    # if we used text, we'll get one giant line.  Instead, we'll use segments\n",
     "                    print('got {} segments from {}'.format(len(segments), mp3_file))\n",
     "                    os.makedirs(os.path.dirname(txt_file), exist_ok=True)\n",
-    "                    with open(txt_file, 'w') as f:\n",
+    "                    with open(txt_file, 'w', encoding='utf-8') as f:\n",
     "                        for segment in segments:\n",
     "                            if whisper_model_name is None:\n",
     "                                f.write(segment.text.strip() + '\\n')\n",
@@ -191,7 +191,7 @@
     "                                'no_speech_prob': segment.no_speech_prob,\n",
     "                            })\n",
     "\n",
-    "                    with open(json_file, 'w') as f:\n",
+    "                    with open(json_file, 'w', encoding='utf-8') as f:\n",
     "                        f.write(json.dumps(tojson))\n",
     "                    print('wrote to {} and {}'.format(txt_file, json_file))\n",
     "process_files()\n",
@@ -304,7 +304,7 @@
     "                answer_file = os.path.join(source_dir, answer_dir, relpath, file)\n",
     "                if os.path.isfile(text_file) and os.path.isfile(date_file) and not os.path.isfile(answer_file):\n",
     "                    print('getting answer for {}: {}'.format(date, text_file))\n",
-    "                    with open(text_file, \"r\") as f:\n",
+    "                    with open(text_file, \"r\", encoding='utf-8') as f:\n",
     "                        content = f.read().strip()\n",
     "                    with open(date_file, \"r\") as f:\n",
     "                        date = f.read().strip()\n",
@@ -312,7 +312,7 @@
     "                    # result = chain.invoke({ \"input_documents\": [Document(page_content=content)] })\n",
     "                    # answer = result['output_text']\n",
     "                    print('writing answer to {}'.format(answer_file))\n",
-    "                    with open(answer_file, 'w') as f:\n",
+    "                    with open(answer_file, 'w', encoding='utf-8') as f:\n",
     "                        f.write(answer)\n",
     "process_files()\n",
     "print('generated {} for all TXTs in {}'.format(answer_dir, os.path.join(source_dir, text_dir)))\n"
@@ -343,7 +343,7 @@
     "                if os.path.isfile(date_file) and os.path.isfile(answer_file):\n",
     "                    with open(date_file, \"r\") as f:\n",
     "                        date = f.read().strip()\n",
-    "                    with open(answer_file, \"r\") as f:\n",
+    "                    with open(answer_file, \"r\", encoding='utf-8') as f:\n",
     "                        answer = f.read().strip()\n",
     "                    results.append(('{} - {}'.format(date, text_file), answer))\n",
     "process_files()\n",
