need to create directories before writing to them

--- a/process.ipynb
+++ b/process.ipynb
@@ -231,6 +231,7 @@
     "                    if not re.match(r'^\\d{4}-\\d{2}-\\d{2}$', date):\n",
     "                        print('invalid date: {} generated for {}'.format(date, txt_file))\n",
     "                        continue\n",
+    "                    os.makedirs(os.path.dirname(date_file), exist_ok=True)\n",
     "                    with open(date_file, 'w') as f:\n",
     "                        f.write(date)\n",
     "process_files()\n",
@@ -312,6 +313,7 @@
     "                    # result = chain.invoke({ \"input_documents\": [Document(page_content=content)] })\n",
     "                    # answer = result['output_text']\n",
     "                    print('writing answer to {}'.format(answer_file))\n",
+    "                    os.makedirs(os.path.dirname(answer_file), exist_ok=True)\n",
     "                    with open(answer_file, 'w', encoding='utf-8') as f:\n",
     "                        f.write(answer)\n",
     "process_files()\n",
