write summary to a text file instead of output

--- a/process.ipynb
+++ b/process.ipynb
@@ -339,6 +339,8 @@
     "        relpath = os.path.relpath(root, start)\n",
     "        for file in files:\n",
     "            if file.endswith(\".txt\"):\n",
+    "                if file == 'summary.txt' and relpath == '':\n",
+    "                    continue\n",
     "                answer_file = os.path.join(source_dir, answer_dir, relpath, file)\n",
     "                date_file = os.path.join(source_dir, date_dir, relpath, file)\n",
     "                text_file = os.path.join(source_dir, text_dir, relpath, file)\n",
@@ -352,8 +354,11 @@
     "\n",
     "# sort results by date and output\n",
     "results.sort(key=lambda x: x[0])\n",
-    "for result in results:\n",
-    "    print('{}\\n{}\\n\\n'.format(result[0], result[1]))\n"
+    "outfile = os.path.join(source_dir, answer_dir, 'summary.txt')\n",
+    "with open(outfile, 'w') as f:\n",
+    "    for result in results:\n",
+    "        f.write('{}\\n{}\\n\\n'.format(result[0], result[1]))\n",
+    "print('wrote {} results to {}'.format(len(results), outfile))\n"
    ]
   }
  ],
