write better filename to summary

--- a/process.ipynb
+++ b/process.ipynb
@@ -349,7 +349,7 @@
     "                        date = f.read().strip()\n",
     "                    with open(answer_file, \"r\", encoding='utf-8') as f:\n",
     "                        answer = f.read().strip()\n",
-    "                    results.append(('{} - {}'.format(date, text_file), answer))\n",
+    "                    results.append(('{} - {}'.format(date, os.path.join(relpath, file)), answer))\n",
     "process_files()\n",
     "\n",
     "# sort results by date and output\n",
