--- a/process.ipynb
+++ b/process.ipynb
@@ -10,7 +10,7 @@
     "import subprocess\n",
     "import re\n",
     "import json\n",
-    "source_dir = \"C:\\\\projects\\\\local\\\\video_analysis\"\n",
+    "source_dir = \"C:\\\\projects\\\\local\\\\random_video\"\n",
     "video_dir = 'video'\n",
     "audio_dir = 'audio'\n",
     "text_dir = 'text-faster'\n",
@@ -94,12 +94,11 @@
     "    for root, dirs, files in os.walk(start):\n",
     "        relpath = os.path.relpath(root, start)\n",
     "        for file in files:\n",
-    "            if file.endswith(\".mp4\"):\n",
+    "            if file.endswith(\".mp4\") or file.endswith(\".m4a\"):\n",
     "                mp4_file = os.path.join(source_dir, video_dir, relpath, file)\n",
     "                mp3_file = os.path.join(source_dir, audio_dir, relpath, file[:-4] + '.mp3')\n",
     "                if not os.path.isfile(mp3_file):\n",
     "                    print('want to create {} from {}'.format(mp3_file, mp4_file))\n",
-    "                    return\n",
     "                    cmd = [ffmpeg_path, '-i', mp4_file, '-vn', '-ar', '44100', '-ac', '2', '-ab', '192k', '-f', 'mp3', mp3_file]\n",
     "                    print(cmd)\n",
     "                    proc = subprocess.Popen(cmd)\n",
