make sure directories exist and handle invalid dates

--- a/process.ipynb
+++ b/process.ipynb
@@ -10,11 +10,18 @@
     "import subprocess\n",
     "import re\n",
     "import json\n",
-    "source_dir = \"C:\\\\projects\\\\local\\\\random_video\"\n",
+    "source_dir = \"C:\\\\projects\\\\local\\\\video2\"\n",
     "video_dir = 'video'\n",
     "audio_dir = 'audio'\n",
     "text_dir = 'text-faster'\n",
     "date_dir = 'date'\n",
+    "def ensure(dir):\n",
+    "    if not os.path.exists(dir):\n",
+    "        os.makedirs(dir)\n",
+    "ensure(os.path.join(source_dir, video_dir))\n",
+    "ensure(os.path.join(source_dir, audio_dir))\n",
+    "ensure(os.path.join(source_dir, text_dir))\n",
+    "ensure(os.path.join(source_dir, date_dir))\n",
     "ffmpeg_path = os.environ['LOCALAPPDATA'] + \"\\\\Microsoft\\\\WinGet\\\\Packages\\\\Gyan.FFmpeg_Microsoft.Winget.Source_8wekyb3d8bbwe\\\\ffmpeg-6.0-full_build\\\\bin\\\\ffmpeg.exe\"\n",
     "import whisper\n",
     "from faster_whisper import WhisperModel\n",
@@ -100,7 +107,7 @@
     "                if not os.path.isfile(mp3_file):\n",
     "                    print('want to create {} from {}'.format(mp3_file, mp4_file))\n",
     "                    cmd = [ffmpeg_path, '-i', mp4_file, '-vn', '-ar', '44100', '-ac', '2', '-ab', '192k', '-f', 'mp3', mp3_file]\n",
-    "                    print(cmd)\n",
+    "                    print(' '.join(cmd))\n",
     "                    proc = subprocess.Popen(cmd)\n",
     "                    result = proc.wait()\n",
     "                    print(\"{} - processed from {}\".format(result, mp4_file))\n",
@@ -229,7 +236,7 @@
     "                    # use a regular expression to make sure date looks like YYYY-mm-dd\n",
     "                    if not re.match(r'^\\d{4}-\\d{2}-\\d{2}$', date):\n",
     "                        print('invalid date: {} generated for {}'.format(date, txt_file))\n",
-    "                        continue\n",
+    "                        date = 'invalid'\n",
     "                    os.makedirs(os.path.dirname(date_file), exist_ok=True)\n",
     "                    with open(date_file, 'w') as f:\n",
     "                        f.write(date)\n",
